[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/background_hub.png" type="Texture" id=1]
[ext_resource path="res://levels/TextureButton.gd" type="Script" id=2]

[node name="hub" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="caveButton" type="TextureButton" parent="."]
margin_top = 403.0
margin_right = 156.0
margin_bottom = 616.0
script = ExtResource( 2 )

[node name="upgradeButton" type="TextureButton" parent="."]
margin_left = 356.0
margin_top = 392.0
margin_right = 450.0
margin_bottom = 482.0

[node name="blacksmithButton" type="TextureButton" parent="."]
margin_left = 487.0
margin_top = 320.0
margin_right = 581.0
margin_bottom = 410.0

[node name="shopButton" type="TextureButton" parent="."]
margin_left = 379.0
margin_top = 263.0
margin_right = 473.0
margin_bottom = 353.0

[connection signal="pressed" from="caveButton" to="caveButton" method="_on_caveButton_pressed"]
[connection signal="pressed" from="upgradeButton" to="caveButton" method="_on_upgradeButton_pressed"]
[connection signal="pressed" from="blacksmithButton" to="caveButton" method="_on_blacksmithButton_pressed"]
[connection signal="pressed" from="shopButton" to="caveButton" method="_on_shopButton_pressed"]
